<resources>
    <string name="app_name_paid" translatable="false">GamesViewer</string>
    <string name="login_login_msg">Login</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_register">Register</string>
    <string name="register_username">Username:</string>
    <string name="register_username_hint">Enter your username</string>
    <string name="register_email">Email:</string>
    <string name="register_email_hint">Enter your email</string>
    <string name="register_password">Password:</string>
    <string name="register_password_hint">Enter your password. Min 8 characters</string>
    <string name="register_pwd_dup">Re-type password:</string>
    <string name="register_pwd_dup_hint">Re-type password</string>
    <string name="register_ok_return_login">Registration successful. You will return to login screen soon</string>
    <string name="assert_view_not_created">Not all views has been created</string>
    <string name="app_home">Home</string>
    <string name="error_no_autologin">Your device doesn\'t support encryptation. Autologin is not possible</string>
    <string name="app_platforms">Platforms</string>
    <string name="app_search">Search</string>
    <string name="app_favorites">Favorites</string>
    <string name="assert_invalid_bottombar_item">Selected invalid BottomBar item</string>
    <string name="placeholder_text" translatable="false">Placeholder</string>
    <string name="description_logo_platform">Platform logo</string>
    <string name="platform_title_name">Platform %1$s</string>
    <string name="assert_needed_data_not_present">Missing needed data to build the view</string>
    <string name="view_platform_games">View platform games</string>
    <string name="description_platform_image">Platform game image</string>
    <string name="description_game_image">Game image</string>
    <string name="platform_games_title">Games %1$s</string>
    <string name="available_on">Available on:</string>
    <string name="description_favorite">Is favorite</string>
    <string name="game_rating">Rating:</string>
    <string name="game_release_date">Release date:</string>
    <string name="game_description">Description:</string>
    <string name="description_game_description">Game description</string>
    <string name="description_qr">QRCode</string>
    <string name="searchbar_hint">Input game name</string>
    <string name="upsa_logo">Logo UPSA</string>
    <string name="about_text">GamesViewer, develop for master MIMO (Máster Universitario en Informática Móvil) by José María Moreno. 2020 Universidad Pontificia de Salamanca. All Rights Reserved.</string>
    <string name="click_me">Click me!</string>
    <string name="title_about">About</string>
    <string name="mimo_url" translatable="false">http://www.web.upsa.es/mimo/</string>
    <string name="title_config">Config</string>
    <string name="text_close">Close</string>
    <string name="text_description_not_found">Has no description</string>
    <string name="github_source_url" translatable="false">https://github.com/Regigicas/master-mimo-android</string>
    <string name="text_github">¡Code on GitHub!</string>
    <string name="title_loading">Loading</string>
    <string name="text_loading">Loading...</string>
    <string name="dont_load_image">Don\'t load images</string>
    <string name="enable_autologin">Enable autologin</string>
    <string name="config_lowdata_key" translatable="false">config_lowdata_key</string>
    <string name="config_autologin_status" translatable="false">config_autologin_status</string>
    <string name="config_max_elements_in_list" translatable="false">config_max_elements_in_list</string>
    <string name="max_elements_list">Max elements to load in lists</string>
    <string name="max_element_list_default">Lists can have 100 loaded elements</string>
    <string name="max_element_list_override">List can have %1$d loaded elements. Min of 20</string>
    <string name="max_elements_num_default" translatable="false">100</string>
    <string name="page_x_of_y" translatable="false">%1$d/%2$d</string>
    <string name="scan_qr">Scan QR</string>
    <string name="change_default_sorting">Home screen sorting</string>
    <string name="config_home_sorting" translatable="false">config_home_sorting</string>
    <string name="summary_ordering" translatable="false">%1$s</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="title_app_settings">App settings</string>
    <string name="cat_app_settings" translatable="false">cat_app_settings</string>
    <string name="user_name_email" translatable="false">%1$s - %2$s</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="logout_yes">Logout</string>
    <string name="logout_no">Cancel</string>
    <string name="str_old_password">Old Password</string>
    <string name="oldpass_newpass_equal">New password must be different from the old one</string>
    <string name="password_change_ok">Successful password change, you will be log out for security reasons</string>
    <string name="min_password_length">Password length have a minimun of 8 characters</string>
    <string name="str_password_min">Password. Min 8 characters</string>
    <string name="app_name_free" translatable="false">GamesViewer Free</string>
    <string name="view_clip">View clip</string>
    <string name="app_name" translatable="false">GamesViewer</string>
    <string name="channel_name" translatable="false">GamesViewer</string>
    <string name="channel_description" translatable="false">GamesViewer Notifications</string>
    <string name="channel_id" translatable="false">GamesViewer_ChannelId</string>
    <string name="game_release_today">A game that you have on favorite is releasing today</string>
    <string name="game_release_name">%1$s is releasing today</string>
    <string name="eneable_receive_fav_noti">Notify when a favorite game is releasing</string>
    <string name="desc_fav_noti">Favorite notification switch</string>
    <string name="notification_disabled">Notifications are disable, you won\'t be notify when a game release</string>
    <string name="no_write_permission">Write permission is not enable, you cannot save the image</string>
    <string name="store_perm_desc">We need the file store permission to save the image to the gallery. If you click Accept below, you will be prompt to give us permission</string>
    <string name="save_img_confirm">Are you sure you want to save the image?</string>
</resources>
