<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/register_username"
    />

    <EditText
        android:id="@+id/textEditUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username_hint"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:nextFocusDown="@id/textEditEmail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_email"
        />

    <EditText
        android:id="@+id/textEditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/textEditPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        />

    <EditText
        android:id="@+id/textEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:nextFocusDown="@id/textEditPasswordRepeat"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_pwd_dup"
        />

    <EditText
        android:id="@+id/textEditPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_pwd_dup_hint"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/str_register"
        android:enabled="false"
        android:theme="@style/DefaultButtonTheme"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
