<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageViewJuego"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/description_game_image"
            />

        <ImageButton
            android:id="@+id/imageButtonFavorito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="80dp"
            app:layout_constraintTop_toBottomOf="@id/imageViewJuego"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icono_favorito_off"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/description_favorite"
            />

        <ImageButton
            android:id="@+id/imageButtonQRCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="80dp"
            app:layout_constraintTop_toBottomOf="@id/imageButtonFavorito"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/icono_qr"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/description_favorite"
            />

        <TextView
            android:id="@+id/textViewAvailableOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_on"
            app:layout_constraintTop_toBottomOf="@id/imageViewJuego"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textViewPlatforms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            app:layout_constraintTop_toBottomOf="@id/textViewAvailableOn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_rating"
            app:layout_constraintTop_toBottomOf="@id/textViewPlatforms"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            app:layout_constraintTop_toTopOf="@id/textViewRating"
            app:layout_constraintLeft_toRightOf="@id/textViewRating"
            android:layout_marginStart="2dp"
            />

        <TextView
            android:id="@+id/textViewRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_release_date"
            app:layout_constraintTop_toBottomOf="@id/textViewRating"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewReleaseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"
            app:layout_constraintTop_toTopOf="@id/textViewRelease"
            app:layout_constraintLeft_toRightOf="@id/textViewRelease"
            android:layout_marginStart="2dp"
            />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_description"
            app:layout_constraintTop_toBottomOf="@id/textViewRelease"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageButtonQRCode"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/textViewDescriptionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="16sp"
                />
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
