<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textEditOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/viewPaddingExtra"
        android:layout_marginLeft="@dimen/viewPaddingExtra"
        android:layout_marginRight="@dimen/viewPaddingExtra"
        android:layout_marginBottom="@dimen/width4"
        android:maxLines="@integer/maxTextLines"
        android:nextFocusDown="@id/textEditPassword"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:hint="@string/str_old_password"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textEditPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/viewPaddingExtra"
        android:layout_marginRight="@dimen/viewPaddingExtra"
        android:layout_marginBottom="@dimen/width4"
        android:hint="@string/register_password_hint"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/textEditPasswordRepeat"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textEditPasswordRepeat"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/viewPaddingExtra"
        android:layout_marginRight="@dimen/viewPaddingExtra"
        android:layout_marginBottom="@dimen/width4"
        android:hint="@string/register_pwd_dup_hint"
        android:imeOptions="actionDone"
        />

</androidx.appcompat.widget.LinearLayoutCompat>
