<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogoApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/width220"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/bias10"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageLogoApp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login_login_msg"
        android:layout_marginTop="@dimen/text20dp"
        android:textSize="@dimen/text30sp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textEditUsername"
        android:layout_width="@dimen/width250"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/width5"
        android:hint="@string/str_username"
        android:maxLines="1"
        android:nextFocusDown="@id/textEditPassword"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        />
    
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textEditPassword"
        android:layout_width="@dimen/width250"
        android:layout_height="wrap_content"
        android:hint="@string/str_password"
        app:layout_constraintTop_toBottomOf="@id/textEditUsername"
        android:layout_marginTop="@dimen/width5"
        app:layout_constraintRight_toRightOf="@id/textEditUsername"
        app:layout_constraintLeft_toLeftOf="@id/textEditUsername"
        android:maxLines="1"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/width200"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textEditPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/width5"
        android:text="@string/login_login_msg"
        android:enabled="false"
        android:theme="@style/DefaultButtonTheme"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="@dimen/width200"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/str_register"
        android:backgroundTint="@android:color/transparent"
        android:background="@android:color/transparent"
        android:textColor="@color/colorGrayDarker"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
